egress-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-httpbin
spec:
  hosts:
  - httpbin.gcp.external
  addresses:
  - 34.67.71.77
  ports:
  - number: 80
    name: http-port
    protocol: TCP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
  - address: 34.67.71.77
  exportTo: ["."]
